// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - MarketingStatusLabel renders 1`] = `
<DocumentFragment>
  <div
    class="box align-items-center display-inline-flex justify-content-center padding-left-2 padding-right-2 wrapper is-medium"
    data-teamleader-ui="marketing-status-label"
  >
    <p
      class="box margin-right-2 ui-text ui-text-body darkest text"
      data-teamleader-ui="ui-text"
    >
      Upgrade now
    </p>
    <span
      class="box align-items-center display-flex teal normal icon"
      data-teamleader-ui="icon"
    />
  </div>
</DocumentFragment>
`;

exports[`Component - MarketingStatusLabel renders with an icon 1`] = `
<DocumentFragment>
  <div
    class="box align-items-center display-inline-flex justify-content-center padding-left-2 padding-right-2 wrapper is-medium"
    data-teamleader-ui="marketing-status-label"
  >
    <p
      class="box margin-right-2 ui-text ui-text-body darkest text"
      data-teamleader-ui="ui-text"
    >
      Upgrade now
    </p>
    <span
      class="box align-items-center display-flex teal normal icon"
      data-teamleader-ui="icon"
    >
      <span
        opacity="0.84"
      >
        Fake icon
      </span>
    </span>
  </div>
</DocumentFragment>
`;
